add layout client

--- a/NongSanShop/NongSanShop.csproj
+++ b/NongSanShop/NongSanShop.csproj
@@ -137,6 +137,67 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="wwwroot\css\bootstrap.min.css" />
+    <Content Include="wwwroot\css\font-awesome.min.css" />
+    <Content Include="wwwroot\css\nivo-slider.css" />
+    <Content Include="wwwroot\css\owl.carousel.css" />
+    <Content Include="wwwroot\css\owl.theme.css" />
+    <Content Include="wwwroot\css\responsive.css" />
+    <Content Include="wwwroot\css\style.css" />
+    <Content Include="wwwroot\images\199px-Noodles_&amp;_Company_Logo_svg.png" />
+    <Content Include="wwwroot\images\American-Express.png" />
+    <Content Include="wwwroot\images\author.jpg" />
+    <Content Include="wwwroot\images\blog-1.jpg" />
+    <Content Include="wwwroot\images\category-image-1.jpg" />
+    <Content Include="wwwroot\images\category-image-2.jpg" />
+    <Content Include="wwwroot\images\category-image-3.jpg" />
+    <Content Include="wwwroot\images\comapny-7.png" />
+    <Content Include="wwwroot\images\company-1.png" />
+    <Content Include="wwwroot\images\company-2.png" />
+    <Content Include="wwwroot\images\company-3.png" />
+    <Content Include="wwwroot\images\company-4.png" />
+    <Content Include="wwwroot\images\company-5.png" />
+    <Content Include="wwwroot\images\company-6.png" />
+    <Content Include="wwwroot\images\company-8.png" />
+    <Content Include="wwwroot\images\company-9.png" />
+    <Content Include="wwwroot\images\food-ad.png" />
+    <Content Include="wwwroot\images\footer-logo.png" />
+    <Content Include="wwwroot\images\kewledits.weebly %28120%29.png" />
+    <Content Include="wwwroot\images\large_left.png" />
+    <Content Include="wwwroot\images\large_right.png" />
+    <Content Include="wwwroot\images\logo.png" />
+    <Content Include="wwwroot\images\Maestro.png" />
+    <Content Include="wwwroot\images\PayPal.png" />
+    <Content Include="wwwroot\images\post-img-2.png" />
+    <Content Include="wwwroot\images\post-img-3.png" />
+    <Content Include="wwwroot\images\post-img.png" />
+    <Content Include="wwwroot\images\product-image-2.jpg" />
+    <Content Include="wwwroot\images\product-image-3.jpg" />
+    <Content Include="wwwroot\images\product-image-4.jpg" />
+    <Content Include="wwwroot\images\product-image-5.jpg" />
+    <Content Include="wwwroot\images\product-image-6.jpg" />
+    <Content Include="wwwroot\images\product-image-7.jpg" />
+    <Content Include="wwwroot\images\product-image-8.jpg" />
+    <Content Include="wwwroot\images\product-image.jpg" />
+    <Content Include="wwwroot\images\product-item-2.jpg" />
+    <Content Include="wwwroot\images\product-item.jpg" />
+    <Content Include="wwwroot\images\search.png" />
+    <Content Include="wwwroot\images\single-product.png" />
+    <Content Include="wwwroot\images\slider.jpg" />
+    <Content Include="wwwroot\images\slider1.jpg" />
+    <Content Include="wwwroot\images\slider2.jpg" />
+    <Content Include="wwwroot\images\titleBorder.png" />
+    <Content Include="wwwroot\images\top.png" />
+    <Content Include="wwwroot\images\Visa-Electron.png" />
+    <Content Include="wwwroot\images\Visa.png" />
+    <Content Include="wwwroot\js\bootstrap.min.js" />
+    <Content Include="wwwroot\js\jquery.min.js" />
+    <Content Include="wwwroot\js\jquery.nicescroll.js" />
+    <Content Include="wwwroot\js\jquery.nivo.slider.js" />
+    <Content Include="wwwroot\js\jquery.scrollUp.min.js" />
+    <Content Include="wwwroot\js\main.js" />
+    <Content Include="wwwroot\js\owl.carousel.min.js" />
+    <Content Include="wwwroot\js\product.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
@@ -162,6 +223,8 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="wwwroot\images\header.psd" />
+    <Content Include="Views\Shared\_ClientLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
