--- a/NongSanShop/NongSanShop.csproj
+++ b/NongSanShop/NongSanShop.csproj
@@ -217,6 +217,7 @@
     <Content Include="wwwroot\js\owl.carousel.min.js" />
     <Content Include="wwwroot\js\product.js" />
     <Content Include="wwwroot\uploads\products\2021\1164079.jpg" />
+    <Content Include="wwwroot\uploads_sample\products\2021\1164079.jpg" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
