--- a/NongSanShop/NongSanShop.csproj
+++ b/NongSanShop/NongSanShop.csproj
@@ -130,8 +130,10 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -237,8 +239,13 @@
     <Content Include="wwwroot\js\owl.carousel.min.js" />
     <Content Include="wwwroot\js\product.js" />
     <Content Include="wwwroot\js\script.min.js" />
+    <Content Include="wwwroot\uploads\categories\category-image-1.jpg" />
+    <Content Include="wwwroot\uploads\categories\category-image-2.jpg" />
+    <Content Include="wwwroot\uploads\categories\category-image-3.jpg" />
     <Content Include="wwwroot\uploads\categories\no_avatar.png" />
     <Content Include="wwwroot\uploads\products\2021\1164079.jpg" />
+    <Content Include="wwwroot\uploads\products\no_avatar.png" />
+    <Content Include="wwwroot\uploads\products\product-image.jpg" />
     <Content Include="wwwroot\uploads_sample\products\2021\1164079.jpg" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
@@ -292,6 +299,17 @@
     <Content Include="Views\Category\Details.cshtml" />
     <Content Include="Views\Category\Edit.cshtml" />
     <Content Include="Views\Category\Index.cshtml" />
+    <Content Include="Views\Blog\Create.cshtml" />
+    <Content Include="Views\Blog\Delete.cshtml" />
+    <Content Include="Views\Blog\Details.cshtml" />
+    <Content Include="Views\Blog\Edit.cshtml" />
+    <Content Include="Views\Blog\Index.cshtml" />
+    <Content Include="Views\Admin\Login.cshtml" />
+    <Content Include="Views\Product\Create.cshtml" />
+    <Content Include="Views\Product\Delete.cshtml" />
+    <Content Include="Views\Product\Details.cshtml" />
+    <Content Include="Views\Product\Edit.cshtml" />
+    <Content Include="Views\Product\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
