--- a/NongSanShop/NongSanShop.csproj
+++ b/NongSanShop/NongSanShop.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\CartController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
+    <Compile Include="Controllers\CheckoutController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\OrderProductController.cs" />
@@ -178,6 +179,8 @@
     <Content Include="Content\Site.css" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Views\Checkout\Index.cshtml" />
+    <Content Include="Views\Home\Checkout.cshtml" />
     <Content Include="Web.config_sample" />
     <Content Include="wwwroot\bootstrap\css\bootstrap.min.css" />
     <Content Include="wwwroot\bootstrap\js\bootstrap.min.js" />
