--- a/NongSanShop/NongSanShop.csproj
+++ b/NongSanShop/NongSanShop.csproj
@@ -368,6 +368,7 @@
     <Content Include="Views\UserCart\Index.cshtml" />
     <Content Include="Views\Home\Blog.cshtml" />
     <Content Include="Views\Home\Store.cshtml" />
+    <Content Include="Views\Home\ProductDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
